--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "com.example.tata"
         minSdkVersion 16
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -24,15 +24,16 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     compile files('libs/okhttp-3.4.1.jar')
     compile files('libs/okio-1.9.0.jar')
-    compile files('libs/BmobSDK_3.5.1_20160719.jar')
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/rxandroid-1.2.0.jar')
     compile files('libs/rxjava-1.1.6.jar')
     compile files('libs/androidasync-2.1.6.jar')
-    compile files('libs/BmobNewIM_2.0.5_20160601.jar')
     compile files('libs/butterknife-7.0.1.jar')
     compile files('libs/universal-image-loader-1.9.5.jar')
+    compile 'cn.bmob.android:bmob-im:2.0.5@aar'
+    compile 'cn.bmob.android:bmob-sdk:3.4.7-aar'
 }
