--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,15 @@
     <!--通知震动-->
     <uses-permission android:name="android.permission.VIBRATE" />
     <!--读外部存储卡-->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <!--写外部存储卡-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!--监听开机-->
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <application
         android:name=".BmobIMApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/icon"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -34,16 +34,15 @@
             </intent-filter>
         </activity>
         <activity android:name="ui.ChatWithYouActivity"></activity>
-        <activity
-            android:name="ui.ChatWithTuLingActivity"
+        <activity android:name="ui.ChatWithTuLingActivity"
             android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name="ui.MainActivity"></activity>
         <activity android:name="ui.SetBackgroundActivity"></activity>
         <activity android:name="ui.ChooseBgPicActivity"></activity>
-        <activity android:name="ui.ShowBgActivity"></activity>
         <activity android:name="ui.SetAvatarActivity"></activity>
+        <activity android:name="ui.FutureMsgActivity"></activity>
         <!-- bmobim start -->
-        <receiver android:name="cn.bmob.newim.core.ConnectChangeReceiver">
+        <receiver android:name="cn.bmob.newim.core.ConnectChangeReceiver" >
             <intent-filter>
                 <action android:name="cn.bmob.action.RECONNECT" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
@@ -51,7 +50,6 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
         </receiver>
-
         <service
             android:name="cn.bmob.newim.core.service.BmobIMService"
             android:process=":bmobcore" />
